-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 10
-
Component/s: hotspot
-
b36
/home/glaubitz/openjdk/hs/build/linux-ppc64-normal-zero-release/jdk/bin/java -Xms64M -Xmx1600M -XX:ThreadStackSize=1536 -XX:+UseSerialGC -Xms32M -Xmx512M -XX:TieredStopAtLevel=1 -cp /home/glaubitz/openjdk/hs/build/linux-ppc64-normal-zero-release/buildtools/tools_jigsaw_classes --add-exports java.base/jdk.internal.module=ALL-UNNAMED build.tools.jigsaw.AddPackagesAttribute /home/glaubitz/openjdk/hs/build/linux-ppc64-normal-zero-release/jdk
uintx CodeCacheExpansionSize=32768 is outside the allowed range [ 65536 ... 18446744073709551615 ]
Error: Could not create the Java Virtual Machine.
Error: A fatal exception has occurred. Program will exit.
ExplodedImageOptimize.gmk:40: recipe for target '/home/glaubitz/openjdk/hs/build/linux-ppc64-normal-zero-release/jdk/_packages_attribute.done' failed
make[3]: *** [/home/glaubitz/openjdk/hs/build/linux-ppc64-normal-zero-release/jdk/_packages_attribute.done] Error 1
make[3]: Leaving directory '/home/glaubitz/openjdk/hs/make'
make/Main.gmk:361: recipe for target 'exploded-image-optimize' failed
make[2]: *** [exploded-image-optimize] Error 2
make[2]: Leaving directory '/home/glaubitz/openjdk/hs
http://mail.openjdk.java.net/pipermail/hotspot-dev/2017-November/029365.html
uintx CodeCacheExpansionSize=32768 is outside the allowed range [ 65536 ... 18446744073709551615 ]
Error: Could not create the Java Virtual Machine.
Error: A fatal exception has occurred. Program will exit.
ExplodedImageOptimize.gmk:40: recipe for target '/home/glaubitz/openjdk/hs/build/linux-ppc64-normal-zero-release/jdk/_packages_attribute.done' failed
make[3]: *** [/home/glaubitz/openjdk/hs/build/linux-ppc64-normal-zero-release/jdk/_packages_attribute.done] Error 1
make[3]: Leaving directory '/home/glaubitz/openjdk/hs/make'
make/Main.gmk:361: recipe for target 'exploded-image-optimize' failed
make[2]: *** [exploded-image-optimize] Error 2
make[2]: Leaving directory '/home/glaubitz/openjdk/hs
http://mail.openjdk.java.net/pipermail/hotspot-dev/2017-November/029365.html
- relates to
-
JDK-8179026 Remove explicit code cache options processing
-
- Resolved
-