8191996: VM startup fails with CodeCacheExpansionSize=32768 is outside the allowed range

Adjusted minimum value according to platform specific default values.

Reviewed-by: kvn